Set up home section, and update the color palette.

--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -187,16 +187,17 @@ $paragraph-margin-bottom:   1rem !default;
 
 $grid-breakpoints: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$grid-breakpoints: map-merge(
+$grid-breakpoints-ordered: map-merge(
+  $grid-breakpoints,
   (
     xs: 0,
     sm: 576px,
     md: 768px,
     lg: 992px,
     xl: 1200px
-  ),
-  $grid-breakpoints
+  )
 );
+$grid-breakpoints: map-merge($grid-breakpoints-ordered, $grid-breakpoints);
 
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 @include _assert-starts-at-zero($grid-breakpoints);
@@ -208,15 +209,16 @@ $grid-breakpoints: map-merge(
 
 $container-max-widths: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$container-max-widths: map-merge(
+$container-max-widths-ordered: map-merge(
+  $container-max-widths,
   (
     sm: 540px,
     md: 720px,
     lg: 960px,
     xl: 1140px
-  ),
-  $container-max-widths
+  )
 );
+$container-max-widths: map-merge($container-max-widths-ordered, $container-max-widths);
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
 
