--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import 'bootstrap/bootstrap';
+@import 'bootstrap-mod';
 @import 'fonts';
 
 /******************************/
@@ -10,13 +10,12 @@ $font-body: 'Gotham Book', Arial, sans-serif;
 
 $white: #FFFFFF;
 $black: #000000;
-$darkgrey: #252525;
-$grey: #BABABA;
-$lightgrey: #F8F9FA;
-$lightgreen: #D1FFD9;
-$lightteal: #85CCCB;
+$grey: #BABABA; 
+$darkgrey: #343A40;
+$lightgrey: #EEF0F0;
 $teal: #21B2BF;
-$navy: #23202B;
+$lightteal: #A8E8E7;
+$lightgreen: #D1FFD9;
 
 $primary: $teal;
 $secondary: $grey;
@@ -89,15 +88,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .bg-dark {
-  background: $navy;
-}
-
-.no-pt{
-  padding-top: 0 !important;
-}
-
-.no-pb{
-  padding-bottom: 0 !important;
+  background: $darkgrey;
 }
 
 
@@ -202,7 +193,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .navbar-dark {
-  background: $navy !important;
+  background: $darkgrey !important;
 
   .navbar-toggler {
     color: $grey;
@@ -244,6 +235,117 @@ h1, h2, h3, h4, h5 {
 
 
 /******************************/
+/***          HOME          ***/
+/******************************/
+
+.home {
+  background: $lightgrey;
+
+  .container {
+    @include media-breakpoint-down(xs) {
+      max-width: 390px;
+      margin: 0 auto;
+    }
+  }
+
+  .home-text-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    font-family: $font-headings;
+    font-weight: 400;
+    line-height: 1.5;
+    text-transform: uppercase;
+    color: $darkgrey;
+
+    @include media-breakpoint-down(sm) {
+      justify-content: flex-start;
+    }
+  }
+
+  .home-text, .be-next {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .home-text {
+    @include media-breakpoint-down(md) {
+      flex-direction: column;
+    }
+
+    font-size: 1.8rem;
+    @include media-breakpoint-up(sm) {
+      font-size: 2.4rem;
+    }
+    @include media-breakpoint-up(xl) {
+      font-size: 2.85rem;
+    }
+    @include media-breakpoint-up(xxl) {
+      font-size: 3.5rem;
+    }
+
+    div {
+      padding: 0 0.75rem;
+    }
+  }
+
+  .be-next {
+    font-size: 3.0rem;
+    @include media-breakpoint-up(sm) {
+      font-size: 3.5rem;
+    }
+    @include media-breakpoint-up(md) {
+      font-size: 4.0rem;
+    }
+    @include media-breakpoint-up(lg) {
+      font-size: 4.5rem;
+    }
+    @include media-breakpoint-up(xl) {
+      font-size: 5.0rem;
+    }
+    @include media-breakpoint-up(xxl) {
+      font-size: 5.5rem;
+    }
+
+    span {
+      padding-left: 0.75rem;
+    }
+  }
+
+  .keyword {
+    color: $teal !important;
+  }
+
+  .icon {
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 100%;
+      min-width: 80px;
+      max-width: 100px;
+      @include media-breakpoint-up(md) {
+        min-width: 100px;
+        max-width: 130px;
+      }
+      @include media-breakpoint-up(lg) {
+        min-width: 120px;
+        max-width: 170px;
+      }
+      max-height: 100%;
+      border-radius: 50%;
+      -webkit-box-shadow: 10px 10px 30px -4px rgba(0, 0, 0, 0.35);
+      -moz-box-shadow: 10px 10px 30px -4px rgba(0, 0, 0, 0.35);
+      box-shadow: 10px 10px 30px -4px rgba(0, 0, 0, 0.35);
+      background: $lightgrey;
+    }
+  }
+}
+
+
+/******************************/
 /***     FEATURE CARDS      ***/
 /******************************/
 
@@ -258,9 +360,9 @@ h1, h2, h3, h4, h5 {
   padding: 20px;
   position: relative;
   border-radius: 4px;
-  -webkit-box-shadow: 0px 10px 30px -4px rgba(0,0,0,0.15);
-  -moz-box-shadow: 0px 10px 30px -4px rgba(0,0,0,0.15);
-  box-shadow: 0px 10px 30px -4px rgba(0,0,0,0.15);
+  -webkit-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
   @include media-breakpoint-down(md){
     margin-bottom: 30px;
   }
